# AuthKit

./: .gitignore  README.md  proj.json  pyproject.toml  test_metadata.py  tp.json
authkit/: __init__.py
authkit/core/: __init__.py  adapters.py  authkit.py  authkit.pyi  registry.py  resolver.py
authkit/domain/: __init__.py
authkit/domain/entities/: __init__.py  intent.py  user.py
authkit/domain/enum/: __init__.py  otp.py
authkit/exceptions/: __init__.py  auth.py
authkit/ports/: __init__.py  passwd_manager.py  security_event.py  session_service.py  token_service.py  user_repo.py
authkit/ports/intents/: __init__.py  registration_intent_store.py  user_id_intent_store.py
authkit/ports/otp/: __init__.py  otp_manager.py  otp_store.py
authkit/ports/user_repo_cqrs/: __init__.py  _reader.py  _writer.py  user_reader_repo.py  user_writer_repo.py
authkit/usecases/: __init__.py
authkit/usecases/Account/: __init__.py  delete_account.py  delete_account_cqrs.py  delete_account_with_otp_start.py  delete_account_with_otp_verify.py
authkit/usecases/Authentication/: __init__.py  login.py  login_cqrs.py  login_with_otp_start.py  (+10 more)
examples/: README.md  extensions_demo.py  manual_test_metadata.py  quickstart.py  uow_demo.py
examples/fastapi_example/: README.md  adapters.py  database.py  debug_login.py  dependencies.py  main.py  models.py
tests/: auth.py  container.py  requirements.txt  test_architecture.py  test_auth_flow.py  test_facade_integration.py  test_otp_flow.py
tests/fakes/: __init__.py  passwd_manager.py  session_service.py  token_service.py  user_repo.py
(+23 files in other folders)
